--- a/AguessingGame/Base.lproj/Main.storyboard
+++ b/AguessingGame/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="SubmittedGuess" destination="BKh-YK-fsC" id="7Cd-58-Gcb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
